--- a/config.yaml
+++ b/config.yaml
@@ -41,7 +41,7 @@ commands: >
 
   /videos - Raiden Network related videos
 
-  /conferences - Upcoming events
+  /events - Upcoming events
 
   /uraiden - MicroRaiden resources
 
